--- a/unitmanagement/templates/unitmanagement/k9_checkup_list_today.html
+++ b/unitmanagement/templates/unitmanagement/k9_checkup_list_today.html
@@ -14,6 +14,13 @@
     {% endif %}
 </div>
 
+<div class="ui small info message">
+  <i class="close icon"></i>
+  <div class="header">
+    Highlighted rows are schedule for today!
+  </div>
+
+</div>
 
 <div class = "ui segment">
 
@@ -29,12 +36,20 @@
 
         <tbody>
             {% for data in checkups %}
-            <tr>
-                <td>{{data.k9}}</td>
-                <td >{{data.k9.handler}}</td>
-                <td>{{data.date_start}}</td>
+            {% if data.1 == True %}
+            <tr class="active">
+                {% else %}
+                <tr>
+                {%endif%}
+                <td>{{data.0.k9}}</td>
+                <td >{{data.0.k9.handler}}</td>
+                {% if data.1 == True %}
+                <td>{{data.0.date_start}} (Today)</td>
+                {% else %}
+                 <td>{{data.0.date_start}}</td>
+                 {%endif%}
                 <td style="text-align:center;" class="two wide">
-                    <a href="{% url 'unitmanagement:physical_exam_form' data.k9.id %}" class="ui tiny basic blue button">Select</a>
+                    <a href="{% url 'unitmanagement:physical_exam_form' data.0.k9.id %}" class="ui tiny basic blue button">Select</a>
                 </td>
             </tr>
             {% endfor %}
@@ -44,5 +59,25 @@
 
 </div>
 
+<script type="text/javascript">
+
+	$(document).ready(function() {
+		$('#tabledata').DataTable( {
+        "order": [[ 2, "asc" ]]
+    });
+		$('.menu .item').tab();
+	});
+
+
+	$('.message .close')
+  .on('click', function() {
+    $(this)
+      .closest('.message')
+      .transition('fade')
+    ;
+  })
+;
+
+</script>
 
 {% endblock %}
