--- a/profiles/templates/profiles/vet_dashboard.html
+++ b/profiles/templates/profiles/vet_dashboard.html
@@ -186,7 +186,7 @@
                                     </div>
                                     <div class="label">
                                         <strong>
-                                            <a href="{% url 'unitmanagement:k9_incident'%}">K9 INCIDENTS</a>
+                                            <a href="{% url 'unitmanagement:k9_incident_list'%}">K9 INCIDENTS</a>
                                         </strong>
                                     </div>
                                 </div>
