--- a/training/templates/training/classify_k9_list.html
+++ b/training/templates/training/classify_k9_list.html
@@ -14,36 +14,36 @@
 
 </div>
 
-{% if request.session.session_user_position == "Trainer"%}
-<center>
-        <div class="ui three statistics">
-      <div class="statistic">
-        <div class="value">
-          {{NDD_count}} / {{NDD_demand}}
-        </div>
-        <div class="label">
-          NDD Count / NDD Required
-        </div>
-      </div>
-      <div class="statistic">
-        <div class="value">
-          {{EDD_count}} / {{EDD_demand}}
-        </div>
-        <div class="label">
-          EDD Count / EDD Required
-        </div>
-      </div>
-      <div class="statistic">
-        <div class="value">
-          {{SAR_count}} / {{SAR_demand}}
-        </div>
-        <div class="label">
-          SAR Count / SAR Required
-        </div>
-      </div>
-    </div>
-    </center>
-{% endif %}
+<!--{% if request.session.session_user_position == "Trainer"%}-->
+<!--<center>-->
+        <!--<div class="ui three statistics">-->
+      <!--<div class="statistic">-->
+        <!--<div class="value">-->
+          <!--{{NDD_count}} / {{NDD_demand}}-->
+        <!--</div>-->
+        <!--<div class="label">-->
+          <!--NDD Count / NDD Required-->
+        <!--</div>-->
+      <!--</div>-->
+      <!--<div class="statistic">-->
+        <!--<div class="value">-->
+          <!--{{EDD_count}} / {{EDD_demand}}-->
+        <!--</div>-->
+        <!--<div class="label">-->
+          <!--EDD Count / EDD Required-->
+        <!--</div>-->
+      <!--</div>-->
+      <!--<div class="statistic">-->
+        <!--<div class="value">-->
+          <!--{{SAR_count}} / {{SAR_demand}}-->
+        <!--</div>-->
+        <!--<div class="label">-->
+          <!--SAR Count / SAR Required-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+    <!--</center>-->
+<!--{% endif %}-->
 
 <div class="ui top attached tabular menu">
     {%if type_text%}
@@ -74,9 +74,6 @@
         <thead>
             <tr>
                 <th>Name</th>
-                <th>Breed</th>
-                <th>Color</th>
-                <th>Sex</th>
                 <th>Age</th>
                 <th></th>
             </tr>
@@ -85,9 +82,6 @@
             {% for data_unclassified in data_unclassified %}
             <tr>
                 <td>{{data_unclassified.name}}</td>
-                <td >{{data_unclassified.breed}}</td>
-                <td>{{data_unclassified.color}}</td>
-                <td >{{data_unclassified.sex}}</td>
                 <td>{{data_unclassified.age}} years and {{data_unclassified.month_remainder}} months</td>
                 <td style="text-align:center;">
                     <a href="{% url 'training:classify_k9_select' data_unclassified.id %}" class = "tiny ui blue basic button">Select</a>
@@ -149,8 +143,8 @@
 <script type="text/javascript">
 
     $(document).ready(function() {
-        $('#tabledata1').DataTable({ "order": [[ 4, "desc" ]]  });
-        $('#tabledata3').DataTable({ "order": [[ 3, "desc" ]]  });
+        $('#tabledata1').DataTable({ "order": []  });
+        $('#tabledata3').DataTable({ "order": []  });
         $('.menu .item').tab();
 
     });
