--- a/profiles/templates/profiles/vet_dashboard.html
+++ b/profiles/templates/profiles/vet_dashboard.html
@@ -211,11 +211,11 @@
                                 <div class="ui raised center aligned segment">
                                 <div class="ui statistic">
                                         <div class="value">
-                                            <i class="calendar alternate orange icon">{{health_pending}}</i>
+                                            <i class="calendar alternate orange icon">{{pending_schedule}}</i>
                                         </div>
                                         <div class="extra content">
                                             <strong>
-                                                <a href="{% url 'unitmanagement:k9_sick_list'%}">PHEX TO BE SCHEDULED</a>
+                                                <a href="{% url 'unitmanagement:k9_checkup_pending'%}">PHEX TO BE SCHEDULED</a>
                                             </strong>
                                         </div>
                                     </div>
