post-defense update

--- a/profiles/templates/profiles/handler_dashboard.html
+++ b/profiles/templates/profiles/handler_dashboard.html
@@ -211,10 +211,25 @@
               </div>
 
               <div class="six wide column" style="padding: 0%;margin:0%;">
-                <div class="ui right aligned basic segment" style="padding: 0%;margin:0%;">
+                    {%if ki %}
+                    <div class="ui info message">
+                      <ul class="list">
+                        {%if ki.incident == 'Lost'%}
+                        <li>You have reported your K9 Lost.</li>
+                        {%elif ki.incident == 'Stolen'%}
+                        <li>You have reported your K9 Stolen.</li>
+                        {%elif ki.incident == 'Accident'%}
+                        <li>You have reported your K9 in an Accident.</li>
+                        <a href="#" class="ui tiny red button died_btn">Died</a>
+                        <a href="{% url 'unitmanagement:k9_accident' ki.id %}?accident=recovered" class="ui tiny blue button">Recovered</a>
+                        {%endif%}
+                      </ul>
+                    </div>
+                    {%endif%}
                     <div class="ui inverted segment">
-                        <h4>Calendar</h4>
-                      </div>
+                            <h4>Calendar</h4>
+                          </div>
+                <div class="ui right aligned basic segment" style="padding: 0%;margin:0%;">
                     <div class="ui buttons">
                       <button class="ui button"  id = "prev" >Previous Year</button>
                       <div class="or"></div>
@@ -264,6 +279,29 @@
 
     </div>
 </div>
+
+{% if ki %}
+<div class="ui modal" id= 'died_modal'>
+    <div class="header">{{k9}}</div>
+    <div class="content">
+      <form class = 'ui form' action="{% url 'unitmanagement:k9_accident' ki.id %}?accident=died" method="POST"> {% csrf_token %}
+        <div class="two fields">
+          <div class="field">
+            <label for="">Date Died</label>
+            <input type="date" name='date_died'>
+          </div>
+          <div class="field">
+              <label for="">Death Certificate</label>
+              <input type="file" name='death_cert'>
+            </div>
+        </div>
+        <center>
+          <button class="ui green button" type="submit">Submit</button>
+        </center>
+      </form>
+    </div>
+  </div>
+  {% endif %}
  <!--End Pre Deployment Items Modal-->
 
  <div id = "id_event_load"></div>
@@ -275,17 +313,19 @@
   color: white;
   }
 
-/* 
+/*
   #calendar {
       max-width: 900px;
       margin: 40px auto;
   } */
 </style>
-    
+
 <script>
 $(document).ready(function() {
       // alert($('.msg').val());
-
+      $( ".died_btn" ).click(function() {
+          $('#died_modal').modal('show');
+        });
       
       if($('.msg').val() == 'event'){
         $('#modal2').modal('show');
@@ -426,7 +466,6 @@ $(document).ready(function() {
         $('#next').click(function() {
         $('#calendar').fullCalendar('nextYear');
         });
-
 
      
 });
