--- a/profiles/templates/profiles/handler_dashboard.html
+++ b/profiles/templates/profiles/handler_dashboard.html
@@ -92,7 +92,7 @@
 
                         {% if reveal_items == True %}
                             <div class="ui two column grid">
-                                <div class="four wide column">
+                                <div class="six wide column">
                                     <input class = "ui green button" type="submit"  value="Confirm Initial Deployment" id = "reveal_predep_checklist">
                                 </div>
                                  <div class="ten wide column">
@@ -182,9 +182,9 @@
   color: white;
   }
 
-  .fc-widget-header .fc-title{
-  background-color: black
-  }
+  <!--.fc-widget-header .fc-title{-->
+  <!--background-color: black-->
+  <!--}-->
 
 /* 
   #calendar {
