--- a/deployment/templates/deployment/schedule_units.html
+++ b/deployment/templates/deployment/schedule_units.html
@@ -36,9 +36,9 @@
           	<tr>
                 <th rowspan="2">Port</th>
 				<th rowspan="2">Area</th>
-                <th rowspan="2">Maritime Count</th>
-                <th rowspan="2">Incident Count</th>
-                <th rowspan="2">Incident Order List</th>
+                <!--<th rowspan="2">Maritime Count</th>-->
+                <!--<th rowspan="2">Incident Count</th>-->
+                <!--<th rowspan="2">Incident Order List</th>-->
                 <th rowspan="2">K9s to be Deployed</th>
                 <th colspan="3">K9s Deployed / K9s Required</th>
                 <th rowspan="2">Deployment Date</th>
@@ -55,16 +55,15 @@
             <tr>
 		                <td> {{location.Location.place}} </td>
                         <td> {{location.Location.area}} </td>
-                         <td> {{location.Maritime_count}}</td>
-                        <td> {{location.Incident_count}}</td>
-                        <td>
+                         <!--<td> {{location.Maritime_count}}</td>-->
+                        <!--<td> {{location.Incident_count}}</td>-->
+                        <!--<td>-->
 
 
-                        <ol class="ui list"> {% for item in location.Incident_Order_List %}
-                            <li>{{item.0}}</li>
-                        {%endfor%}</ol>
-                        </td>
-
+                        <!--<ol class="ui list"> {% for item in location.Incident_Order_List %}-->
+                            <!--<li>{{item.0}}</li>-->
+                        <!--{%endfor%}</ol>-->
+                        <!--</td>-->
 
                         <td> <div class="ui bulleted list">{% for item in location.Temp_list %}
                             <div class="item">{{item.k9}} | {{item.k9.capability}}</div>
@@ -84,7 +83,7 @@
             </tbody>
 </table>
 
-     <div class="ui right aligned segment" style="padding: 0px;">
+     <div class="ui right aligned basic segment" style="padding: 0px;">
         <button class = "ui button green" type="submit" onclick="return confirm('Are you sure?')">Set Deployment Dates</button>
     </div>
 
