--- a/profiles/templates/profiles/sidebar_um.html
+++ b/profiles/templates/profiles/sidebar_um.html
@@ -74,6 +74,9 @@
                              <a href="{% url 'unitmanagement:k9_checkup_pending'%}" class="item">
                                 <i class="calendar icon"></i>Schedule K9 Checkups for Initial Deployment
                             </a>
+                            <a href="{% url 'unitmanagement:k9_checkup_list_today'%}" class="item">
+                                <i class="clipboard list icon"></i>K9s for Checkup
+                            </a>
 
 
                             {% elif request.session.session_user_position == "Handler" %}
