--- a/unitmanagement/templates/unitmanagement/trained_list.html
+++ b/unitmanagement/templates/unitmanagement/trained_list.html
@@ -1,4 +1,5 @@
 {% extends "profiles/sidebar_um.html" %}
+{% load um_tags %}
 
 {% block content %}
 <div class="ui inverted segment" style="padding:20px;">
@@ -174,57 +175,54 @@
             <thead>
                 <tr>
                     <th>Name</th>
-                    <th>Serial Number</th>
                     <th>Breed</th>
                     <th>Capability</th>
+                    <th>Sex</th>
                     <th>Finished Training</th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
                 {% for data in data %}
-                {% for ts in ts %}
+
                 <tr>
-                    <td>{{data.name}}</td>
-                    <td>{{data.serial_number}}</td>
+                    <td>{{data}}</td>
                     <td >{{data.breed}}</td>
                     <td>{{data.capability}}</td>
-                    {% if forloop.counter == forloop.parentloop.counter %}
-                    <td>{{ts}}</td>
-                    {% endif %}
+                    <td>{{data.sex}}</td>
+
+                    <td>{{ts|list_item_date:forloop.counter0}}</td>
+
                     <td style="text-align:center;" class="two wide">
-                        <a href="#" class="ui tiny basic blue button btn_modal" id='{{data.id}}' >Select</a>
+                        <!--<a href="#" class="ui tiny basic blue button btn_modal" id='{{data.id}}' >Select</a>-->
+                        <button class="ui tiny basic blue button btn_modal" id='id-{{data.id}}' value='{{data.id}}'>Select</button>
                     </td>
                 </tr>
-                {% endfor %}
+
                 {% endfor %}
             </tbody>
         </table>
     </div>
 
-</div>
 
 <div class="ui large modal" id='id_modal_data'>
+
 </div>
 
 
-<script type="text/javascript">
+<script>
 
-    $(document).ready(function() {
-        $('#tabledata1').DataTable();
-        $('.menu .item').tab();
+     $( ".btn_modal" ).click(function() {
+            var url = 'trained-list/ajax_load_k9_data';
+            id = $(this).val();
 
-        $( ".btn_modal" ).bind( "click", function() {
-            var url = 'trained-list/ajax_load_k9_data';  
-            id = $(this).attr('id');
-           
-            $.ajax({                      
-                url: url,                    
+            $.ajax({
+                url: url,
                 data: {
-                'id': id,      
+                'id': id,
                 },
-                success: function (data) {   
-                $("#id_modal_data").html(data); 
+                success: function (data) {
+                $("#id_modal_data").html(data);
                 }
             });
             $('#id_modal_data').modal('show');
@@ -234,6 +232,15 @@
         $("#btn").click(function(){
             $("#summary").slideToggle();
         });
+</script>
+
+<script type="text/javascript">
+
+    $(document).ready(function() {
+        $('#tabledata1').DataTable({
+         "order": [[ 4, "desc" ]]
+         });
+        $('.menu .item').tab();
 
     });
 
